--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -1,4 +1,4 @@
-name: Greet Everyone
+name: Ciphey Core
 on: push
 #on:
 #  push:
@@ -15,7 +15,7 @@ jobs:
     steps:
     - name: Install deps
       run: |
-        sudo apt-get install -y cmake g++ libboost-math-dev ninja python3 python3-pip
+        sudo apt-get install -y cmake g++ libboost-math-dev ninja python3 python3-pip python3-setuptools
         pip3 install poetry
     - name: Do build
       run: |
