--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-16.04
 
     steps:
+    - uses: actions/checkout@v2
     - name: Install deps
       run: |
         sudo apt-get install -y cmake g++ libboost-math-dev ninja python3 python3-pip python3-setuptools
