--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install deps
       run: |
-        sudo apt-get install -y cmake g++ libboost-math-dev ninja python3 python3-pip python3-setuptools
+        sudo apt-get install -y cmake g++ libboost-math-dev ninja-build python3 python3-pip python3-setuptools
         pip3 install poetry
     - name: Do build
       run: |
