--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Do build
       run: |
         mkdir build && cd build
-        cmake .. -GNinja
+        cmake .. -GNinja -DCIPHEY_CORE_TEST=OFF
         ninja
     - name: Create python package
       run:
