--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Install deps
       run: |
         sudo apt-get install -y cmake g++-8 libboost-math-dev ninja-build python3 python3-pip python3-setuptools swig
-        pip3 install poetry
+        sudo pip3 install poetry
     - name: Do build
       run: |
         mkdir build && cd build
