--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -27,7 +27,7 @@ jobs:
       run: |
         cd build
         poetry build
-        auditwheel repair build/dist/*.whl
+        bash -c 'auditwheel repair build/dist/*.whl'
     - name: Upload result
       uses: actions/upload-artifact@v2
       with:
