--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -10,13 +10,13 @@ on: push
 jobs:
   build-linux64:
     name: Build Linux64 package
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-16.04
 
     steps:
     - uses: actions/checkout@v2
     - name: Install deps
       run: |
-        sudo apt-get install -y cmake g++-8 libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig
+        sudo apt-get install -y cmake clang-4.0 libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig
         sudo pip3 install poetry auditwheel
     - name: Do build
       run: |
