Added some more verbose logging

--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -27,6 +27,7 @@ jobs:
       run: |
         cd build
         poetry build
+        auditwheel show dist/*.whl
         auditwheel repair dist/*.whl
     - name: Upload result
       uses: actions/upload-artifact@v2
