--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install deps
       run: |
-        yum -y install cmake boost-devel ninja-build llvm-toolset
+        yum -y install cmake boost-devel ninja-build llvm-toolset-8
         pip install poetry auditwheel
 #        sudo apt-get install -y cmake clang-4.0 libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig
     - name: Do build
