--- a/.github/workflows/build-on-push.yaml
+++ b/.github/workflows/build-on-push.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Do build
       run: |
         mkdir build && cd build
-        cmake3 .. -GNinja -DCIPHEY_CORE_TEST=OFF -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang
+        cmake3 .. -GNinja -DCIPHEY_CORE_TEST=OFF
         ninja
     - name: Create python package
       run: |
