--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,6 +6,7 @@ jobs:
     name: Test the package
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Install deps
       run: |
         sudo apt-get install -y cmake clang-4.0 libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig
