--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install deps
       run: |
-        sudo apt-get install -y cmake clang-4.0 libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig  libgtest-dev
+        sudo apt-get install -y cmake clang libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig  libgtest-dev
         sudo pip3 install poetry auditwheel
     - name: Do build
       run: |
