--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,8 +11,7 @@ jobs:
     - name: Install deps
       run: |
         apt-get update
-        apt-get install -y cmake clang libboost-math-dev ninja-build python3 python3-pip python3-setuptools python3-venv swig  libgtest-dev
-        pip3 install poetry auditwheel
+        apt-get install -y cmake clang libboost-math-dev ninja-build libpython3-dev python3-venv swig  libgtest-dev
     - name: Do build
       run: |
         mkdir build && cd build
