--- a/py/pyproject.toml.in
+++ b/py/pyproject.toml.in
@@ -1,15 +1,16 @@
 [tool.poetry]
 name = "cipheycore"
-version = "0.0.1"
+version = "@CMAKE_PROJECT_VERSION@"
 description = ""
 authors = ["Cyclic3 <cyclic3.git@gmail.com>"]
+build = "build.py"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=0.12", "setuptools-cpp"]
 build-backend = "poetry.masonry.api"
