--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,13 @@ set(UseSWIG_TARGET_NAME_PREFERENCE STANDARD)
 option(CIPHEY_PKGCONFIG "Force pkgconfig for python locating" OFF)
 if (CIPHEY_PKGCONFIG)
   find_package(PkgConfig REQUIRED)
-  pkg_search_module(Python3 python3 REQUIRED)
-  set(PYTHON_LIB PkgConfig::Python3)
+  pkg_search_module(Python3 python3 REQUIRED IMPORTED_TARGET)
+  #set(PYTHON_LIB PkgConfig::Python3)
+  include_directories(${Python3_INCLUDE_DIRS})
 else()
   find_package(Python3 REQUIRED COMPONENTS Development)
-  set(PYTHON_LIB Python3::Python)
+  #set(PYTHON_LIB Python3::Python)
+  include_directories(${Python3_INCLUDE_DIRS})
 endif()
 
 find_package(SWIG REQUIRED)
