--- a/.github/workflows/build-win.yaml
+++ b/.github/workflows/build-win.yaml
@@ -18,26 +18,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: vars
+    - name: Chocolatey deps
       shell: cmd
       run: |
-        echo Using boost %BOOST_ROOT_1_72_0%
-    - name: deps
-      run: |
+        choco upgrade chocolatey -y
         choco install swig -y
-        C:\hostedtoolcache\windows\Python\${{matrix.ver}}\x64\python -m pip install poetry auditwheel setuptools
+    - name: Python3 pip deps
+      run: |
+        C:\hostedtoolcache\windows\Python\${{matrix.ver}}\x64\python -m pip install poetry setuptools
     - name: Do build    
       shell: cmd
       run: |
         mkdir build && cd build
-        cmake .. -DCIPHEY_CORE_TEST=OFF -DCIPHEY_PYTHON_HEADERS=C:\hostedtoolcache\windows\Python\${{matrix.ver}}\x64\include -DBOOST_ROOT=%BOOST_ROOT_1_72_0%
-        cmake --build .
+        cmake .. -DCIPHEY_CORE_TEST=OFF -DCIPHEY_CORE_PYTHON=C:\hostedtoolcache\windows\Python\${{matrix.ver}}\x64 -DBOOST_ROOT=%BOOST_ROOT_1_72_0%
+        cmake --build . --config Release
     - name: Create python package
       run: |
         cd build
         C:\hostedtoolcache\windows\Python\${{matrix.ver}}\x64\python -m poetry build
-        C:\hostedtoolcache\windows\Python\${{matrix.ver}}\x64\python -m auditwheel show dist/*.whl
-        C:\hostedtoolcache\windows\Python\${{matrix.ver}}\x64\python -m auditwheel repair dist/*.whl
     - name: Upload result
       uses: actions/upload-artifact@v2
       with:
