Allow single failures in build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,13 @@ set(UseSWIG_TARGET_NAME_PREFERENCE STANDARD)
 
 option(CIPHEY_CORE_PYTHON "Force including (and linking if necessary) from the python installation in the given directory")
 if (CIPHEY_CORE_PYTHON)
-  include_directories("${CIPHEY_CORE_PYTHON}/include")
-  link_directories("${CIPHEY_CORE_PYTHON}/libs")
+  file(GLOB has_include_dir "${CIPHEY_CORE_PYTHON}")
+  if (EXISTS "${CIPHEY_CORE_PYTHON}/include/")
+    include_directories("${CIPHEY_CORE_PYTHON}/include")
+    link_directories("${CIPHEY_CORE_PYTHON}/libs")
+  else()
+    include_directories(${CIPHEY_CORE_PYTHON})
+  endif()
 else()
   find_package(Python3 REQUIRED COMPONENTS Development)
   include_directories(${Python3_INCLUDE_DIRS})
