--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -13,6 +13,7 @@ jobs:
     container: quay.io/pypa/manylinux2014_x86_64
 
     strategy:
+      fail-fast: false
       matrix:
         abi: ["cp35-cp35m", "cp36-cp36m", "cp37-cp37m", "cp38-cp38"]
 
