--- a/.github/workflows/build-win.yaml
+++ b/.github/workflows/build-win.yaml
@@ -13,6 +13,7 @@ jobs:
     runs-on: windows-latest
 
     strategy:
+      fail-fast: false
       matrix:
         ver: ["3.5.4", "3.6.8", "3.7.7", "3.8.3"]
 
