--- a/.github/workflows/build-win.yaml
+++ b/.github/workflows/build-win.yaml
@@ -1,12 +1,11 @@
 name: Windows Release Build
-on: push
-#on:
-#  push:
-#    branches:
-#    - master
-#  pull_request:
-#    branches:
-#    - master
+on:
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
 jobs:
   build-win64:
     name: Build Win64 package
