--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -1,12 +1,11 @@
 name: MacOS Release Build
-on: [push]
-#on:
-#  push:
-#    branches:
-#    - master
-#  pull_request:
-#    branches:
-#    - master
+on:
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
 jobs:
   build-win64:
     name: Build MacOS package
@@ -15,30 +14,31 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ver: ["3", "3.8"]
+        ver: ["", "@3.8"]
 
     steps:
     - uses: actions/checkout@v2
     - name: Homebrew deps
       run: |
         brew update
-        brew install python@${{matrix.ver}} boost swig
+        brew install python${{matrix.ver}} boost swig
+        /usr/local/Cellar/python${{matrix.ver}}/*/Frameworks/Python.framework/Versions/3*/bin/python3 -c "import sys; print(sys.version)"
     - name: Python3 pip deps
       run: |
-        python3 -m pip install poetry setuptools
+        /usr/local/Cellar/python${{matrix.ver}}/*/Frameworks/Python.framework/Versions/3*/bin/python3 -m pip install poetry setuptools
     - name: Do build    
       run: |
         mkdir build && cd build
         # Seperate out for variable expansion
-        export CIPHEY_PYTHON_INCLUDE=/usr/local/Cellar/python@3*/*/Frameworks/Python.framework/Versions/3*
+        export CIPHEY_PYTHON_INCLUDE=/usr/local/Cellar/python${{matrix.ver}}/*/Frameworks/Python.framework/Versions/3*
         cmake .. -DCIPHEY_CORE_TEST=OFF -DCIPHEY_CORE_PYTHON=$(echo $CIPHEY_PYTHON_INCLUDE)
         cmake --build . --config Release
     - name: Create python package
       run: |
         cd build
-        python3 -m poetry build
+        /usr/local/Cellar/python${{matrix.ver}}/*/Frameworks/Python.framework/Versions/3*/bin/python3 -m poetry build
     - name: Upload result
       uses: actions/upload-artifact@v2
       with:
-        name: win64
+        name: macos
         path: build
