--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -21,7 +21,17 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install deps
       run: |
-        yum -y install cmake3 boost-devel ninja-build llvm-toolset-7 swig3
+        yum -y install cmake3 boost-devel llvm-toolset-7
+    - name: Build Swig
+      run: |
+        cd /tmp
+        curl -L https://github.com/swig/swig/archive/rel-4.0.1.tar.gz -o a.tar.gz
+        tar -xzf a.tar.gz
+        cd swig*
+        ./autogen.sh
+        ./configure
+        make
+        make install
     - name: overlay hack
       run: |
         ln -s /opt/python/${{matrix.abi}}/include/python*/ /opt/python_headers
@@ -32,7 +42,7 @@ jobs:
     - name: Do build
       run: |
         mkdir build && cd build
-        cmake3 .. -GNinja -DCIPHEY_CORE_TEST=OFF -DCIPHEY_CORE_PYTHON=/opt/python_headers -DCMAKE_BUILD_TYPE=Release
+        cmake3 .. -DCIPHEY_CORE_TEST=OFF -DCIPHEY_CORE_PYTHON=/opt/python_headers -DCMAKE_BUILD_TYPE=Release
         cmake3 --build .
     - name: Create python package
       run: |
