--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -37,6 +37,7 @@ jobs:
       run: |
         cd build
         /usr/local/Cellar/python${{matrix.ver}}/*/Frameworks/Python.framework/Versions/3*/bin/python3 -m poetry build
+        mv dist wheelhouse
     - name: Upload result
       uses: actions/upload-artifact@v2
       with:
