--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ver: ["", "@3.8"]
+        ver: ["@3.7", "@3.8"]
 
     steps:
     - uses: actions/checkout@v2
