--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -1,11 +1,8 @@
 name: Linux Release Build
 on:
-  push:
-    branches:
-    - master
-  pull_request:
-    branches:
-    - master
+  push: 
+    tags:
+    - v.*
 jobs:
   build-linux64:
     name: Build Linux64 package
