--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -1,11 +1,8 @@
 name: MacOS Release Build
 on:
-  push:
-    branches:
-    - master
-  pull_request:
-    branches:
-    - master
+  push: 
+    tags: 
+    - v.*
 jobs:
   build-win64:
     name: Build MacOS package
