Fix for weird apple bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,9 +29,8 @@ set(UseSWIG_TARGET_NAME_PREFERENCE STANDARD)
 option(CIPHEY_CORE_PYTHON "Force including (and linking if necessary) from the python installation in the given directory")
 if (CIPHEY_CORE_PYTHON)
   if (APPLE)
-
     file(GLOB python_include "${CIPHEY_CORE_PYTHON}/include/python*")
-    file(GLOB python_lib "${CIPHEY_CORE_PYTHON}/lib/libpython*.dylib")
+    file(GLOB python_lib "${CIPHEY_CORE_PYTHON}/lib/config*/libpython*.a")
     include_directories(${python_include})
     set(ciphey_py_extra ${python_lib})
   elseif (EXISTS "${CIPHEY_CORE_PYTHON}/include/")
@@ -41,6 +40,7 @@ if (CIPHEY_CORE_PYTHON)
     include_directories(${CIPHEY_CORE_PYTHON})
   endif()
 else()
+  set(Python3_USE_STATIC_LIBS)
   find_package(Python3 REQUIRED COMPONENTS Development)
   include_directories(${Python3_INCLUDE_DIRS})
   set(ciphey_py_extra Python3::Python)
